refactor: 조회수 저장 구현